# steamos-intel-handheld

./: .gitignore  .gitlab-ci.yml  .gitmodules  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: arch-release.yml  ci.yml  pages.yml
data/restore/: manifest.toml
data/systemd/: steamos-intel-handheld-power-control.service  steamos-intel-handheld-restore.service
decky/steamos-intel-handheld-ec/: README.md  main.py  package-lock.json  package.json  plugin.json  tsconfig.json
docs/: ai-development-harness.md  design.md  package-repository.md  references.md  release-process.md  steamos-qemu-build-env.md  tdd-workflow.md  upstreaming.md
docs/hardware/: msi-claw-8-ai-plus-charge-limit-investigation.md  msi-claw-8-ai-plus.md  steam-beta-display-settings-regression-2026-06-27.md
scripts/: assemble-arch-release-pages.sh  build-arch-release-repo.sh  check-local.sh  collect-device-info.sh  configure-gamescope-display-workaround.sh  configure-mangoapp-dropin.sh  install-on-device.sh  steamos-qemu-build-env.sh  verify-gitlab-pacman-artifact.sh  verify-on-device.sh
site/: CNAME  index.html
tests/: test_arch_release_workflow.py  test_decky_plugin_assets.py  test_decky_plugin_backend.py  test_ec_charge_control.py  test_ec_charge_control_cli.py  test_gamescope_native_panel.py  test_gitlab_ci_packaging.py  test_harness_policy.py  test_integration_assets.py  test_pages_site.py  test_power_control_backend.py  test_power_control_cli.py  test_release_documentation.py  test_restore_etc.py  test_restore_etc_cli.py
(+63 files in other folders)
